--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap');
+
+:root {
+    --main-header-clr: #30336B;
+}
 
 * {
     margin: 0;
@@ -12,5 +16,193 @@ html {
 
 body {
     max-height: 100vh;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
+    display: grid;
+    grid-template-columns: 200px 100%;
+}
+
+nav {
+    background-color: var(--main-header-clr);
+    width: 200px;
+    height: 100vh;
+
+}
+
+.logo {
+    padding: 4rem;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 1px solid #615e5e;
+}
+
+.logo img {
+    width: 80px;
+    border-radius: 50%;
+}
+
+.portfolio-list {
+    list-style: none;
+}
+
+.portfolio-list li {
+
+    border-bottom: 1px solid #615e5e;
+    font-size: 16px;
+    padding: 2rem;
+}
+
+.portfolio-list li a {
+    text-decoration: none;
+    color: #fff;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    position: relative;
+    background-color: var(--main-header-clr);
+    color: #fff;
+    padding: 4rem 0;
+}
+
+header h1 {
+    font-size: 42px;
+}
+
+header p {
+    font-size: 18px;
+}
+
+.toggle {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    background-color: #22244B;
+    border-radius: 5px;
+    border: none;
+    padding: 6px;
+}
+
+.toggle ion-icon {
+    font-size: 32px;
+    color: #fff;
+}
+
+.btn {
+    border-radius: 5px;
+    border: none;
+    background-color: #BE2EDD;
+    color: #fff;
+    cursor: pointer;
+}
+
+.btn-hed {
+    font-size: 20px;
+    padding: 1rem 2.5rem;
+}
+
+.container {
+    width: 800px;
+    margin: 0 auto;
+    padding: 4rem 0;
+}
+
+.container h2 {
+    font-size: 24px;
+    margin-bottom: 16px;
+}
+
+.container p {
+    font-size: 16px;
+    margin-bottom: 16px;
+}
+
+.benefits {
+    padding: 0 5rem;
+    font-size: 16px;
+    margin-bottom: 16px;
+}
+
+.modal-container {
+    width: 400px;
+    background-color: #fff;
+}
+
+.close-btn {
+    background: transparent;
+    font-size: 32px;
+    border: none;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    cursor: pointer;
+}
+
+.modal-container-hed {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.modal-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1.5rem;
+    font-size: 18px;
+    font-weight: 500;
+    background-color: #30336B;
+    color: #fff;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+
+.modal-header h3 {
+    text-align: center;
+}
+
+.medal-content {
+    font-size: 16px;
+    padding: 4rem 1.5rem 1.5rem 1.5rem;
+}
+
+.medal-content p {
+    margin-bottom: 12px;
+}
+
+.form-content {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin-bottom: 10px;
+}
+
+.form-content input {
+    padding: 1rem;
+    font-size: 16px;
+    border: 1px solid #000;
+    border-top: none;
+}
+
+.btn-submit {
+    padding: 1rem;
 }
