--- a/style.css
+++ b/style.css
@@ -17,15 +17,16 @@ html {
 body {
     max-height: 100vh;
     font-family: 'Lato', sans-serif;
-    display: grid;
-    grid-template-columns: 200px 100%;
+    /* display: grid;
+    grid-template-columns: 200px 100%; */
 }
 
 nav {
     background-color: var(--main-header-clr);
     width: 200px;
     height: 100vh;
-
+    position: fixed;
+    transform: translateX(-100%)
 }
 
 .logo {
@@ -33,7 +34,8 @@ nav {
     display: grid;
     align-items: center;
     justify-content: center;
-    border-bottom: 1px solid #615e5e;
+    border-bottom: 1px solid rgba(200, 200, 200, 0.1);
+    ;
 }
 
 .logo img {
@@ -47,7 +49,7 @@ nav {
 
 .portfolio-list li {
 
-    border-bottom: 1px solid #615e5e;
+    border-bottom: 1px solid rgba(200, 200, 200, 0.1);
     font-size: 16px;
     padding: 2rem;
 }
@@ -66,7 +68,7 @@ header {
     position: relative;
     background-color: var(--main-header-clr);
     color: #fff;
-    padding: 4rem 0;
+    padding: 4rem 15px;
 }
 
 header h1 {
@@ -75,6 +77,7 @@ header h1 {
 
 header p {
     font-size: 18px;
+    text-align: center;
 }
 
 .toggle {
@@ -112,7 +115,8 @@ header p {
 .container {
     width: 800px;
     margin: 0 auto;
-    padding: 4rem 0;
+    padding: 4rem 15px;
+    max-width: 100%;
 }
 
 .container h2 {
@@ -131,30 +135,31 @@ header p {
     margin-bottom: 16px;
 }
 
-.modal-container {
-    width: 400px;
-    background-color: #fff;
-}
 
-.close-btn {
-    background: transparent;
-    font-size: 32px;
-    border: none;
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    cursor: pointer;
-}
+
 
 .modal-container-hed {
-    width: 100%;
-    height: 100%;
+    position: fixed;
     top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: none;
+
+}
+
+.modal-container {
+    width: 400px;
+    max-width: 100%;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
     position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
 }
 
 .hidden {
@@ -164,20 +169,23 @@ header p {
 }
 
 .modal-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1.5rem;
+    padding: 15px;
     font-size: 18px;
     font-weight: 500;
     background-color: #30336B;
     color: #fff;
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
 }
 
-.modal-header h3 {
-    text-align: center;
+.close-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: transparent;
+    font-size: 32px;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    padding: 8px 12px;
 }
 
 .medal-content {
